--- a/index.html
+++ b/index.html
@@ -15,18 +15,8 @@
    .text-blue-darkblue {color: #285dab;}
 
    /* Icon styling */
-   .icon::after {
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-   }
-   .carret::after {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f106";
-   }
+   .fa-angle-up {opacity: 0.8;}
+   .menu-button-active .fa-angle-up {opacity: 1; transform: rotate(180deg); transition: 0.2s}
   </style>
   <style type="text/css">
    /* open-sans-regular - latin */
@@ -123,8 +113,21 @@
       </h1>
      </div>
      <div class="divide-y divide-white">
-      <div class="py-4">
-       <button class="w-full bg-green-500 text-justify text-white text-sm">Welcome <span class="float-right"><i class="fas fa-angle-up fa-rotate-180"></i></span></button>
+      <div class="py-4 menu">
+       <button class="w-full text-left text-white font-bold text-sm">Welcome <span class="float-right"><i class="fas fa-angle-up"></i></span></button>
+       <div class="text-white text-sm pl-2 border-l-2 border-blue-300 mt-2">
+        <ul>
+         <li class="py-1">
+          <a href="#" class="hover:underline">Item 1</a>
+         </li>
+         <li class="py-1">
+          <a href="#" class="hover:underline">Item 2</a>
+         </li>
+         <li class="py-1">
+          <a href="#" class="hover:underline">Item 3</a>
+         </li>
+        </ul>
+       </div>
       </div>
       <div>
        2
