--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/1332795812.js" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
   <style>
    * {font-family: 'Open Sans',Arial,Helvetica,Verdana,sans-serif;}
    h1, h2, h3, h4 {font-family: 'AvenirBlack',Arial,Helvetica,Verdana,sans-serif; text-transform: uppercase;}
@@ -16,7 +17,7 @@
 
    /* Icon styling */
    .fa-angle-up {opacity: 0.8;}
-   .menu-button-active .fa-angle-up {opacity: 1; transform: rotate(180deg); transition: 0.2s}
+   .active .fa-angle-up {opacity: 1; transform: rotate(90deg); transition: 0.2s}
   </style>
   <style type="text/css">
    /* open-sans-regular - latin */
@@ -114,8 +115,8 @@
      </div>
      <div class="divide-y divide-white">
       <div class="py-4 menu">
-       <button class="w-full text-left text-white font-bold text-sm">Welcome <span class="float-right"><i class="fas fa-angle-up"></i></span></button>
-       <div class="text-white text-sm pl-2 border-l-2 border-blue-300 mt-2">
+       <button class="w-full text-left text-white font-bold text-sm menu-button">Welcome <span class="float-right"><i class="fas fa-angle-right"></i></span></button>
+       <div class="text-white text-sm pl-2 border-l-2 border-blue-300 mt-2 hidden">
         <ul>
          <li class="py-1">
           <a href="#" class="hover:underline">Item 1</a>
