--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
            </label>
           </div>
           <div class="w-5/6 flex items-center">
-           <textarea id="element_introductions_v1_area1" name="element_introductions_v1_area1" class="text-sm border rounded-sm px-4 py-1 w-full" placeholder="Enter some text"></textarea>
+           <textarea id="element_introductions_v1_area1" name="element_introductions_v1_area1" class="text-sm border rounded-sm px-4 py-1 w-full" placeholder="Enter some text - Max 200 characters" maxlength="200"></textarea>
           </div>
          </div>
          <div class="flex mb-2">
@@ -265,7 +265,7 @@
            </h4>
           </div>
           <div class="w-5/6 flex items-center">
-           <input placeholder="Enter some text" name="title" class="text-sm border rounded-sm px-4 py-1 w-full"/>
+           <input placeholder="Enter some text" id="element_introductions_v1_button" name="element_introductions_v1_button" class="text-sm border rounded-sm px-4 py-1 w-full"/>
           </div>
          </div>
          <div class="flex mb-2">
@@ -280,15 +280,18 @@
          </div>
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
+           <label for="element_introductions_v1_image">
            <h4>
             Image
            </h4>
+          </label>
           </div>
           <div class="w-5/6 flex items-center">
            <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v1_image" onchange="loadFile(event)" style="display: none">
            <label for="element_introductions_v1_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
             Upload image
            </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 384 pixels wide</span>
           </div>
          </div>
         </div>      
