Created base pages

--- a/elements/frameworks.html
+++ b/elements/frameworks.html
@@ -23,7 +23,7 @@
      <div class="my-4 mx-4 xl:mx-8">
       <div>
        <h2 class="text-blue-darkblue text-4xl -mt-2">
-        Welcome<span class="text-orange-coolblue">.</span>
+        Frameworks<span class="text-orange-coolblue">.</span>
        </h2>
       </div>
      </div>
