--- a/misc/links.html
+++ b/misc/links.html
@@ -8,7 +8,7 @@
   <link href="/style/style.css" rel="stylesheet">
   <link href="/style/fonts.css" rel="stylesheet">
   <link href="/style/email.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 
   <script src="https://kit.fontawesome.com/1332795812.js" crossorigin="anonymous"></script>
  </head>
@@ -30,6 +30,6 @@
     </div>
    </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
  </body>
 </html>
