--- a/misc/template.html
+++ b/misc/template.html
@@ -8,7 +8,7 @@
   <link href="/style/style.css" rel="stylesheet">
   <link href="/style/fonts.css" rel="stylesheet">
   <link href="/style/email.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 
   <script src="https://kit.fontawesome.com/1332795812.js" crossorigin="anonymous"></script>
  </head>
