--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,7 @@
  </div>
  <div class="flex items-center ml-4">
   <h1 class="text-white font-bold sm:text-lg md:text-xl lg:text-2xl xl:text-2xl xl:mt-8">
-   Email Development Pages<span class="text-orange-coolblue">.</span>
+   Email Development System<span class="text-orange-coolblue">.</span>
   </h1>
  </div>
  <div class="flex items-center ml-auto mr-4">
