--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <!--Content-->
    <div class="xl:col-span-10">
     <div class="mt-8 xl:mt-24">
-     <div class="my-4 mx-auto xl:mx-8 w-5/6 divide-y divide-gray-300">
+     <div class="my-4 mx-auto xl:mx-8 w-5/6 xl:w-4/6 divide-y divide-gray-300">
       <div class="pb-8">
        <h2 class="text-blue-darkblue text-4xl -mt-2">
         Welcome<span class="text-orange-coolblue">.</span>
@@ -37,7 +37,7 @@
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <i class="far fa-book-spells text-6xl text-blue-coolblue mb-4"></i>
           <h4>Email Development 101</h4>
-          <p class="text-sm">Learn the basics of email development.</p>
+          <p class="text-sm">Learn the basics of email code and development.</p>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
           </div>
